# Portfolio-Threat-Early-Warning-Agent

./: .gitignore  PRD_portfolio_threat_agent_v2.md  README.md  pyproject.toml
docs/: APPROACH_AND_BUILD_STORY.md  SETUP.md  TECHNICAL_DOCUMENTATION.md
examples/: eval_cases.json  golden_portfolio.json  portfolio.json
portfolio_threat_agent/: __init__.py  __main__.py  agent.py  config.py  dev_cli.py  evaluation.py  market_data.py  models.py  monitor.py  portfolio.py  prompts.py  source_parsing.py  structured.py  telegram.py  threats.py  tools.py
tests/: test_agent.py
